# deps_libjpeg-turbo

./: CMakeLists.txt
resources/: ojdkbuild_libjpeg-turbo.def
resources/libjpeg-turbo_1290_cmake/: CMakeLists.txt
test/: CMakeLists.txt
